--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
     <main>
         <div class="hero">
-            <video autoplay="" loop="" src="assets/video/hero.mp4"></video>
+            <video autoplay="true" loop="" muted src="assets/video/hero.mp4"></video>
         </div>
-        <img src="assets/img/separador.png" alt="separador" id="separador">
+        <img src="assets/img/separador2.png" alt="separador" id="separador">
         <section class="quienes-somos">
             <h2>¿QUIÉNES SOMOS?</h2>
             <div class="integrantes">
