--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="assets/img/logo1.png" alt="logo">
+        <a href="index.html" class="logo"><img src="assets/img/logo1.png" alt="logo"></a>
         <nav>
             <ul>
-                <li><a href="">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="#servicios">SERVICIOS</a></li>
-                <li><a href="pages/portfolio.html">PORTFOLIO</a></li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>
                 <li><a href="#contact">CONTACTO</a></li>
             </ul>
         </nav>
@@ -102,7 +102,7 @@
                 <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
                 <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
             </div>
-            <button class="portfolio-btn"><a href="">VER MÁS</a></button>
+            <button class="portfolio-btn"><a href="pages/vfx.html">VER MÁS</a></button>
         </section>
         <img src="assets/img/separador.png" alt="separador" id="separador">
         <section class="contact" id="contact">
@@ -121,7 +121,6 @@
                 </div>
                 <button class="portfolio-btn"><a href="">ENVIAR</a></button>
             </div>
-            <div class="spacer"></div>
         </section>
     </main>
 </body>
