--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
         <section class="portfolio" id="portfolio">
             <h2>PORTFOLIO</h2>
             <div class="portfolio-container">
-                <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
-                <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
-                <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
-                <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
-                <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
-                <img src="assets/img/portfolio1.jpg" alt="" class="noInvertImgs">
+                <img src="assets/img/port1.jpg" alt="" class="noInvertImgs">
+                <img src="assets/img/port2.jpg" alt="" class="noInvertImgs">
+                <img src="assets/img/port3.jpg" alt="" class="noInvertImgs">
+                <img src="assets/img/port4.jpg" alt="" class="noInvertImgs">
+                <img src="assets/img/port5.jpg" alt="" class="noInvertImgs">
+                <img src="assets/img/port6.jpg" alt="" class="noInvertImgs">
             </div>
             <button class="portfolio-btn"><a href="pages/vfx.html">VER MÁS</a></button>
         </section>
