--- a/pages/modelado.html
+++ b/pages/modelado.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/assets/js/script.js"></script>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/font/stylesheet.css">
+    <script src="../assets/js/script.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/font/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
     <title>ZEN</title>
 </head>
 <body>
@@ -33,19 +34,67 @@
             <div class="portfolio-menu">
                 <button class="portfolio-btn"><a href="vfx.html">VFX</a></button>
                 <button class="portfolio-btn"><a href="motion.html">MOTION GRAPHICS</a></button>
-                <button class="portfolio-btn-p"><a href="diseño.html">DISEÑO GRÁFICO</a></button>
-                <button class="portfolio-btn"><a href="modelado.html">MODELADO 3D</a></button>
-                <button class="portfolio-btn"><a href="">DESARROLLO WEB</a></button>
-                <button class="portfolio-btn"><a href="">APPS Y JUEGOS</a></button>
+                <button class="portfolio-btn"><a href="diseño.html">DISEÑO GRÁFICO</a></button>
+                <button class="portfolio-btn-p"><a href="modelado.html">MODELADO 3D</a></button>
+                <button class="portfolio-btn"><a href="web.html">DESARROLLO WEB</a></button>
+                <button class="portfolio-btn"><a href="apps.html">APPS Y JUEGOS</a></button>
             </div>
             <div class="portfolio-content">
-                <img src="../assets/video/diseño/1.1.jpg" alt="">
-                <img src="../assets/video/diseño/1.2.jpg" alt="">
-                <img src="../assets/video/diseño/2.4.jpg" alt="">
-                <img src="../assets/video/diseño/2.5.jpg" alt="">
-                <img src="../assets/video/diseño/3.1.jpg" alt="">
-                <img src="../assets/video/diseño/4.2.jpg" alt="">
-                <img src="../assets/video/diseño/6.jpg" alt="">
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Portal Gun</h3>
+                    <p class="portfolio-p">Este es un modelo de la famosa Portal Gun de la franquicia de videojuegos "Portal". Es capaz de llevarte de un punto al otro rápidamente desafiando las leyes de la física.</p>
+                    <div class="portfolio-3d-imgs">
+                        <a href="../assets/img/3d/3.1.jpg"><img src="../assets/img/3d/3.1.jpg" alt=""></a>
+                        <a href="../assets/img/3d/3.2.jpg"><img src="../assets/img/3d/3.2.jpg" alt=""></a>
+                        <a href="../assets/img/3d/3.3.jpg"><img src="../assets/img/3d/3.3.jpg" alt=""></a>
+                    </div>
+                </div>
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Arcade Retro</h3>
+                    <p class="portfolio-p">Un arcade ya abandonado hace tiempo con múltiples maquinitas.</p>
+                    <div class="portfolio-3d-imgs">
+                        <a href="../assets/img/3d/4.0.jpg"><img src="../assets/img/3d/4.0.jpg" alt=""></a>
+                        <a href="../assets/img/3d/4.3.jpg"><img src="../assets/img/3d/4.3.jpg" alt=""></a>
+                        <a href="../assets/img/3d/4.4.jpg"><img src="../assets/img/3d/4.4.jpg" alt=""></a>
+                    </div>
+                </div>                
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Yamaha Electone</h3>
+                    <p class="portfolio-p">Los Electones son una línea de órganos electrónicos de Yamaha, los cuales tienen una apariencia más que particular y fueron muy modernos en su momento.</p>
+                    <div class="portfolio-3d-imgs">
+                        <a href="../assets/img/3d/6.1.jpg"><img src="../assets/img/3d/6.1.jpg" alt=""></a>
+                        <a href="../assets/img/3d/6.2.jpg"><img src="../assets/img/3d/6.2.jpg" alt=""></a>
+                        <a href="../assets/img/3d/6.jpg"><img src="../assets/img/3d/6.jpg" alt=""></a>
+                    </div>
+                </div>                
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Alien</h3>
+                    <p class="portfolio-p">Este es un particular alien, científico y asesino una buena mezcla.</p>
+                    <div class="portfolio-3d-imgs">
+                        <a href="../assets/img/3d/5.1.jpg"><img src="../assets/img/3d/5.1.jpg" alt=""></a>
+                        <a href="../assets/img/3d/5.2.jpg"><img src="../assets/img/3d/5.2.jpg" alt=""></a>
+                        <a href="../assets/img/3d/5.jpg"><img src="../assets/img/3d/5.jpg" alt=""></a>
+                    </div>
+                </div>                
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Rune Pendrive</h3>
+                    <p class="portfolio-p">Un pendrive con estética de “Rune Designs”</p>
+                    <div class="portfolio-3d-imgs">
+                        <a href="../assets/img/3d/1.1.jpg"><img src="../assets/img/3d/1.1.jpg" alt=""></a>
+                        <a href="../assets/img/3d/1.2.jpg"><img src="../assets/img/3d/1.2.jpg" alt=""></a>
+                        <a href="../assets/img/3d/1.3.jpg"><img src="../assets/img/3d/1.3.jpg" alt=""></a>
+                    </div>
+                </div>                
+                <div class="portal-container2">
+                    <div class="modelado1">
+                        <h3 class="portfolio-title">Isometric Rooms</h3>
+                        <video src="../assets/img/3d/2.mp4" controls></video>
+                    </div>
+                <div class="modelado2">
+                        <h3 class="portfolio-title">Olympics NFT</h3>
+                        <video src="../assets/img/3d/7.mp4" controls></video>
+                    </div>
+                </div>                
             </div>
         </div>
     </main>
