--- a/pages/motion.html
+++ b/pages/motion.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/assets/js/script.js"></script>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/font/stylesheet.css">
+    <script src="../assets/js/script.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/font/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
     <title>ZEN</title>
 </head>
 <body>
@@ -34,23 +35,56 @@
                 <button class="portfolio-btn"><a href="vfx.html">VFX</a></button>
                 <button class="portfolio-btn-p"><a href="motion.html">MOTION GRAPHICS</a></button>
                 <button class="portfolio-btn"><a href="diseño.html">DISEÑO GRÁFICO</a></button>
-                <button class="portfolio-btn"><a href="">MODELADO 3D</a></button>
-                <button class="portfolio-btn"><a href="">DESARROLLO WEB</a></button>
-                <button class="portfolio-btn"><a href="">APPS Y JUEGOS</a></button>
+                <button class="portfolio-btn"><a href="modelado.html">MODELADO 3D</a></button>
+                <button class="portfolio-btn"><a href="web.html">DESARROLLO WEB</a></button>
+                <button class="portfolio-btn"><a href="apps.html">APPS Y JUEGOS</a></button>
             </div>
-            <div class="portfolio-content">
-                <video src="../assets/video/motion/1.mp4" controls></video>
-                <video src="../assets/video/motion/2.mp4" controls></video>
-                <video src="../assets/video/motion/3.mp4" controls></video>
-                <video src="../assets/video/motion/4.mp4" controls></video>
-                <video src="../assets/video/motion/5.mp4" controls></video>
-                <video src="../assets/video/motion/6.mp4" controls></video>
-                <video src="../assets/video/motion/7.mp4" controls></video>
-                <video src="../assets/video/motion/8.mp4" controls></video>
-                <video src="../assets/video/motion/9.mp4" controls></video>
-                <video src="../assets/video/motion/10.mp4" controls></video>
+            <div class="portfolio-content">          
+                <div class="portal-container2-1">
+                    <div class="modelado1">
+                        <h3 class="portfolio-title">Orbitres</h3>
+                        <video src="../assets/video/motion/1.mp4" controls></video>
+                    </div>
+                <div class="modelado2">
+                        <h3 class="portfolio-title">Nintendo Switch</h3>
+                        <video src="../assets/video/motion/2.mp4" controls></video>
+                    </div>
+                </div> 
+                <div class="portal-container3-1">
+                    <div class="modelado3">
+                        <h3 class="portfolio-title">Tunnelbear</h3>
+                        <video src="../assets/video/motion/3.mp4" controls></video>
+                    </div>
+                    <div class="modelado1">
+                        <h3 class="portfolio-title">Calabaza</h3>
+                        <video src="../assets/video/motion/9.mp4" controls></video>
+                    </div>
+                    </div>
+                </div>  
+                <div class="portal-container3">
+                    <div class="modelado3">
+                        <h3 class="portfolio-title">Gonzalo Sampieri</h3>
+                        <video src="../assets/video/motion/4.mp4" controls></video>
+                    </div>
+                    <div class="modelado1">
+                        <h3 class="portfolio-title">Tambores</h3>
+                        <video src="../assets/video/motion/6.mp4" controls></video>
+                    </div>
+                    </div>
+                </div>  
+                <div class="portal-container4">
+                    <div class="modelado2">
+                        <h3 class="portfolio-title">Cara</h3>
+                        <video src="../assets/video/motion/8.mp4" controls></video>
+                    </div>
+                    <div class="modelado2">
+                        <h3 class="portfolio-title">Unicornio</h3>
+                        <video src="../assets/video/motion/10.mp4" controls></video>
+                    </div>
+                </div>                 
             </div>
         </div>
     </main>
 </body>
 </html> 
+
