--- a/pages/vfx.html
+++ b/pages/vfx.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/assets/js/script.js"></script>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/font/stylesheet.css">
+    <script src="../assets/js/script.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/font/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
     <title>ZEN</title>
 </head>
 <body>
@@ -35,16 +36,40 @@
                 <button class="portfolio-btn"><a href="motion.html">MOTION GRAPHICS</a></button>
                 <button class="portfolio-btn"><a href="diseño.html">DISEÑO GRÁFICO</a></button>
                 <button class="portfolio-btn"><a href="modelado.html">MODELADO 3D</a></button>
-                <button class="portfolio-btn"><a href="">DESARROLLO WEB</a></button>
-                <button class="portfolio-btn"><a href="">APPS Y JUEGOS</a></button>
+                <button class="portfolio-btn"><a href="web.html">DESARROLLO WEB</a></button>
+                <button class="portfolio-btn"><a href="apps.html">APPS Y JUEGOS</a></button>
             </div>
-            <div class="portfolio-content">
-                <video src="../assets/video/vfx/1.mp4" controls></video>
-                <video src="../assets/video/vfx/2.mp4" controls></video>
-                <video src="../assets/video/vfx/3.mp4" controls id="small-video"></video>
-                <video src="../assets/video/vfx/4.mp4" controls></video>
+            <div class="portfolio-content">          
+                <div class="portal-container2">
+                    <div class="modelado1">
+                        <h3 class="portfolio-title">Dragón en la nieve</h3>
+                        <video src="../assets/video/vfx/1.mp4" controls></video>
+                    </div>
+                <div class="modelado2">
+                        <h3 class="portfolio-title">Portal</h3>
+                        <video src="../assets/video/vfx/2.mp4" controls></video>
+                    </div>
+                </div> 
+                <div class="portal-container3">
+                    <div class="modelado3">
+                        <h3 class="portfolio-title">Monster</h3>
+                        <video src="../assets/video/vfx/3.mp4" controls></video>
+                    </div>
+                    <div class="modelado1">
+                        <h3 class="portfolio-title">Faraón</h3>
+                        <video src="../assets/video/vfx/4.mp4" controls></video>
+                    </div>
+                    </div>
+                </div>  
+                <div class="portal-container4">
+                    <div class="modelado2">
+                        <h3 class="portfolio-title">Robot</h3>
+                        <video src="../assets/video/vfx/5.mp4" controls></video>
+                    </div>
+                </div>                 
             </div>
         </div>
     </main>
 </body>
 </html> 
+
