--- a/pages/diseño.html
+++ b/pages/diseño.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/assets/js/script.js"></script>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/font/stylesheet.css">
+    <script src="../assets/js/script.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/font/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico">
     <title>ZEN</title>
 </head>
 <body>
@@ -35,17 +36,48 @@
                 <button class="portfolio-btn"><a href="motion.html">MOTION GRAPHICS</a></button>
                 <button class="portfolio-btn-p"><a href="diseño.html">DISEÑO GRÁFICO</a></button>
                 <button class="portfolio-btn"><a href="modelado.html">MODELADO 3D</a></button>
-                <button class="portfolio-btn"><a href="">DESARROLLO WEB</a></button>
-                <button class="portfolio-btn"><a href="">APPS Y JUEGOS</a></button>
+                <button class="portfolio-btn"><a href="web.html">DESARROLLO WEB</a></button>
+                <button class="portfolio-btn"><a href="apps.html">APPS Y JUEGOS</a></button>
             </div>
             <div class="portfolio-content">
-                <img src="../assets/video/diseño/1.1.jpg" alt="">
-                <img src="../assets/video/diseño/1.2.jpg" alt="">
-                <img src="../assets/video/diseño/2.4.jpg" alt="">
-                <img src="../assets/video/diseño/2.5.jpg" alt="">
-                <img src="../assets/video/diseño/3.1.jpg" alt="">
-                <img src="../assets/video/diseño/4.2.jpg" alt="">
-                <img src="../assets/video/diseño/6.jpg" alt="">
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Ash</h3>
+                    <div class="portfolio-diseño">
+                        <a href="../assets/img/diseño/1.1.jpg"><img src="../assets/img/diseño/1.1.jpg" alt=""></a>
+                        <video src="../assets/img/diseño/ash.mp4" controls></video>
+                    </div>
+                </div>           
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Groot</h3>
+                    <div class="portfolio-diseño">
+                        <a href="../assets/img/diseño/1.3.jpg"><img src="../assets/img/diseño/1.3.jpg" alt=""></a>
+                        <video src="../assets/img/diseño/groot.mp4" controls></video>
+                    </div>
+                </div>  
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Ilustración y Tratamiento Digital</h3>
+                    <div class="portfolio-diseño-il">
+                        <a href="../assets/img/diseño/3.1.jpg"><img src="../assets/img/diseño/3.1.jpg" alt=""></a>
+                        <a href="../assets/img/diseño/4.2.jpg"><img src="../assets/img/diseño/4.2.jpg" alt=""></a>
+                        <a href="../assets/img/diseño/6.jpg"><img src="../assets/img/diseño/6.jpg" alt=""></a>
+                    </div>
+                </div>
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Branding Neptune</h3>
+                    <div class="logotipos">
+                        <a href="../assets/img/diseño/nep2.jpeg"><img src="../assets/img/diseño/nep2.jpeg" alt=""></a>
+                        <a href="../assets/img/diseño/nep.png"><img src="../assets/img/diseño/nep.png" alt=""></a>
+                        <a href="../assets/img/diseño/nep3.jpeg"><img src="../assets/img/diseño/nep3.jpeg" alt=""></a>
+                    </div>
+                </div> 
+                <div class="portal-container">
+                    <h3 class="portfolio-title">Branding Wagy</h3>
+                    <div class="logotipos paddingb">
+                        <a href="../assets/img/diseño/mockup1.jpg"><img src="../assets/img/diseño/mockup1.jpg" alt=""></a>
+                        <a href="../assets/img/diseño/Logowagy.jpg"><img src="../assets/img/diseño/Logowagy.jpg" alt=""></a>
+                        <a href="../assets/img/diseño/mockup2.jpg"><img src="../assets/img/diseño/mockup2.jpg" alt=""></a>
+                    </div>
+                </div>   
             </div>
         </div>
     </main>
